--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -17,18 +20,35 @@
         <button id="image4"  onclick="showContent('content4')">Core Icecream pints</button>
         <button id="image5" onclick="showContent('content5')">Topped</button>
     </div>
-    <h1 id="hr">Craving something cool and creamy?<br>
+    <!-- <h1 id="hr">Craving something cool and creamy?<br>
         Indulge your sweet tooth.<br>
-        Discover your new <span id="hr1">favorite flavor.</span></h1>
+        Discover your new <span id="hr1">favorite flavor.</span></h1> -->
+    <div class="animate" id="hr">
+        <h1 class="hr2">Indulge your taste buds with our dreamy, creamy creations. Discover a world of flavors that will leave you craving for more!</h1>
+
+        <div class="icecream top-right">
+            <img src="coulds.jpg" alt="Ice Cream" class="icecreamImage">
+        </div>
+        <div class="icecream center-right">
+            <img src="coulds.jpg" alt="Ice Cream" class="icecreamImage">
+        </div>
+        <div class="cow">
+            <img src="cow1.jpg" alt="Cow" id="cowImage">
+        </div>
+        <div class="house">
+            <img src="house.jpg" alt="House" id="houseImage">
+        </div>
+        <div class="grass"></div>
+    </div>
     <div id="content1" class="content">
         
         <div id="content">
          <div class="card1">
         <div class="menu">
            <div class="pint1"><img class="img" src="pint1.webp"></div>
-            <i class="fa-solid fa-heart"></i>
+            <i  class="fa-solid fa-heart"></i>
             <h2 class="h2">Impretzively Fudged</h2>
-            <p style="font-size: 25px;">With pretzels-a-plenty in rich chocolate ice cream, this pint is packed with sweet & salty satisfaction. You're bound to be impretzed!</p>
+            <p class="text" style="font-size: 25px;">With pretzels-a-plenty in rich chocolate ice cream, this pint is packed with sweet & salty satisfaction. You're bound to be impretzed!</p>
             <div class="star">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -283,7 +303,7 @@
            <div class="menu">
                <div class="topped1"><img class="img" src="topped1.avif"></div>
                <i class="fa-solid fa-heart"></i>
-               <h2 class="h2">Dirt Cke</h2>
+               <h2 class="h2">Dirt Cake</h2>
                <p style="font-size: 25px;">Grab your shovel, er spoon, and start digging into this crushed cookie-topped, vanilla pudding crowd pleaser. Don't forget to add gummy worms!</p>
                <div class="star">
                    <i class="fa-solid fa-star"></i>
