--- a/ice.html
+++ b/ice.html
@@ -38,7 +38,7 @@
         delivered straight to your door.
       </h2>
       <div id="btn">
-        <button>View More<i class="ri-arrow-right-line"></i></button>
+        <button href=".time1">View More<i class="ri-arrow-right-line"></i></button>
       </div>
       <div id="milk">
         <img id="milkimg" src="milk1.jpg" alt="">
@@ -52,6 +52,7 @@
       <img class="ice1" src="main.jpg">
     </div>
   </div>
+  <section class="time1">
   <div id="Time">
     <!-- <div class="icecream.center-right">
       <img src="coulds.jpg" alt="Ice Cream" class="icecreamImage">
@@ -59,6 +60,7 @@
   <div class="icecream.center-left">
     <img src="coulds.jpg" alt="Ice Cream" class="icecreamImage">
 </div> -->
+<h1 class="name">Journey of Ben & Jerry</h1>
   <div class="timeline">
     <div class="timeline-event left" >
       <div class="timeline-date">1978</div>
@@ -110,6 +112,7 @@
   </div>
   </div>
 </div>
+</section>
   <div class="gallery">
     <h1 id="imghead">Sweet Delights: Explore Our Ice Cream Photo Collection</h1>
    
